@@ -19,6 +19,7 @@ COMMON_SOURCE =  \
     commentary.h \
     dictlex.c \
     dictlex.h \
+    find_dlg_defs.h \
     gbs.c \
     gbs.h \
     gs_bookmarks.c \
@@ -35,8 +36,6 @@ COMMON_SOURCE =  \
     gs_editor_search.h \
     gs_editor_toolbar.c \
     gs_editor_toolbar.h \
-    gs_find_dlg.c \
-    gs_find_dlg.h \
     gs_getinfo_dlg.c \
     gs_getinfo_dlg.h \
     gs_gnomesword.c \
